# itgoldcoins

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libitgoldcoinsconsensus.pc.in
.tx/: config
build-aux/m4/: itgoldcoins_find_bdb48.m4  itgoldcoins_qt.m4  itgoldcoins_subdir_to_include.m4
contrib/: README.md  itgoldcoins-qt.pro  itgoldcoinsd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  itgoldcoins-qt.desktop  itgoldcoins-qt.install  itgoldcoins-qt.lintian-overrides  itgoldcoins-qt.protocol  itgoldcoins-tx.install  itgoldcoinsd.bash-completion  itgoldcoinsd.examples  itgoldcoinsd.install  rules  watch  (+2 more)
depends/: README.md
doc/: build-osx.md  build-unix.md  build-windows.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  dbwrapper.cpp  dbwrapper.h  (+85 more)
src/bench/: .gitignore  Examples.cpp  bench.cpp  bench.h  bench_itgoldcoins.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  itgoldcoins.cpp  itgoldcoins.qrc  itgoldcoins_locale.qrc  itgoldcoinsaddressvalidator.cpp  itgoldcoinsaddressvalidator.h  itgoldcoinsamountfield.cpp  itgoldcoinsamountfield.h  itgoldcoinsgui.cpp  itgoldcoinsgui.h  itgoldcoinsstrings.cpp  itgoldcoinsunits.cpp  itgoldcoinsunits.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  (+66 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: itgoldcoins_af.ts  itgoldcoins_af_ZA.ts  itgoldcoins_ar.ts  itgoldcoins_be_BY.ts  itgoldcoins_bg.ts  itgoldcoins_bg_BG.ts  itgoldcoins_bs.ts  itgoldcoins_ca.ts  itgoldcoins_ca@valencia.ts  itgoldcoins_ca_ES.ts  itgoldcoins_cs.ts  itgoldcoins_cs_CZ.ts  itgoldcoins_cy.ts  itgoldcoins_da.ts  itgoldcoins_de.ts  itgoldcoins_el.ts  itgoldcoins_el_GR.ts  itgoldcoins_en.ts  itgoldcoins_en_GB.ts  itgoldcoins_eo.ts  itgoldcoins_es.ts  itgoldcoins_es_AR.ts  itgoldcoins_es_CL.ts  itgoldcoins_es_CO.ts  itgoldcoins_es_DO.ts  itgoldcoins_es_ES.ts  itgoldcoins_es_MX.ts  itgoldcoins_es_UY.ts  itgoldcoins_es_VE.ts  itgoldcoins_et.ts  itgoldcoins_eu_ES.ts  itgoldcoins_fa.ts  itgoldcoins_fa_IR.ts  itgoldcoins_fi.ts  itgoldcoins_fr.ts  itgoldcoins_fr_CA.ts  itgoldcoins_fr_FR.ts  itgoldcoins_gl.ts  itgoldcoins_he.ts  itgoldcoins_hi_IN.ts  (+43 more)
src/qt/res/: itgoldcoins-qt-res.rc
src/qt/res/icons/: itgoldcoins.icns
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: interpreter.cpp  interpreter.h  itgoldcoinsconsensus.cpp  itgoldcoinsconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_itgoldcoins_NativeSecp256k1.c  org_itgoldcoins_NativeSecp256k1.h
src/secp256k1/src/java/org/itgoldcoins/: NativeSecp256k1.java
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  itgoldcoins-util-test.py  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  (+16 more)
src/test/data/: README.md  itgoldcoins-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+127 files in other folders)
